// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots components/SpruceForm Example 1 1`] = `
<div>
  <div>
    <h3
      class="css-18p6yz-SettingsCardTitle e1h7idos1 leafygreen-ui-feh85s"
    >
      Distro Projects
    </h3>
    <div
      class="css-akg61l-SettingsCard e1h7idos0 leafygreen-ui-1v4ednr"
    >
      <form
        class="rjsf"
        novalidate=""
      >
        <div
          class="form-group field field-object css-ejwhfc-DefaultFieldContainer eny4k1v0"
          id=" root"
        >
          <fieldset
            class="css-0"
            id="root"
          >
            <div
              class="form-group field field-string css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_cloneMethod"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  class="css-12pm1mq-MaxWidthContainer eevpusu0"
                >
                  <div
                    class="leafygreen-ui-1nkq8lt"
                  >
                    <label
                      class="leafygreen-ui-o3xcrd"
                      for="select-158"
                      id="select-157-label"
                    >
                      Project Cloning Method
                    </label>
                    <button
                      aria-controls="select-157-menu"
                      aria-describedby="select-157-description"
                      aria-disabled="false"
                      aria-expanded="false"
                      aria-invalid="false"
                      aria-labelledby="select-157-label"
                      class="lg-ui-button-0000 leafygreen-ui-3qrx9g"
                      data-testid="leafygreen-ui-select-menubutton"
                      id="select-158"
                      type="button"
                      value="legacy-ssh"
                    >
                      <div
                        class="leafygreen-ui-v038xi"
                      />
                      <div
                        class="leafygreen-ui-1qmzz4y"
                      >
                        <div
                          class="leafygreen-ui-obh8q1"
                        >
                          <div
                            class="leafygreen-ui-17aj16e"
                          >
                            Legacy SSH
                          </div>
                        </div>
                        <svg
                          alt=""
                          aria-hidden="true"
                          class="leafygreen-ui-4dp7tf"
                          height="16"
                          role="presentation"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-array css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_expansions"
            >
              <h6
                class="css-ho1tq1-StyledSubtitle e63qz861 leafygreen-ui-19p3n10"
                id="root_expansions__title"
              >
                Expansions
              </h6>
              <div
                class="css-y5jij6-ElementWrapper-AddButtonContainer e1jxkcec6"
              >
                <button
                  aria-disabled="false"
                  class="lg-ui-button-0000 leafygreen-ui-pt6pqu"
                  data-cy="add-button"
                  type="button"
                >
                  <div
                    class="leafygreen-ui-v038xi"
                  />
                  <div
                    class="leafygreen-ui-v95oty"
                  >
                    <svg
                      alt=""
                      aria-hidden="true"
                      class="leafygreen-ui-18si895"
                      fill="none"
                      height="16"
                      role="presentation"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.5 2a1 1 0 00-1 1v3.5H3a1 1 0 00-1 1v1a1 1 0 001 1h3.5V13a1 1 0 001 1h1a1 1 0 001-1V9.5H13a1 1 0 001-1v-1a1 1 0 00-1-1H9.5V3a1 1 0 00-1-1h-1z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                    Add
                  </div>
                </button>
              </div>
              <div
                class="css-1mmfwj9-ArrayContainer e1jxkcec5"
              >
                <div
                  class="css-nbhfvd-ArrayItemRow e1jxkcec7"
                >
                  <div
                    class="form-group field field-object css-ejwhfc-DefaultFieldContainer eny4k1v0"
                    id=" root_expansions_0"
                  >
                    <fieldset
                      class="css-0"
                      id="root_expansions_0"
                    >
                      <div
                        class="form-group field field-string css-ejwhfc-DefaultFieldContainer eny4k1v0"
                        id=" root_expansions_0_key"
                      >
                        <div
                          class="css-c1sqx6-ElementWrapper ee4bs9n0"
                        >
                          <div
                            class="css-12pm1mq-MaxWidthContainer eevpusu0"
                          >
                            <div
                              class="css-1kbcljo-StyledTextInput eevpusu7 leafygreen-ui-xtefr5"
                            >
                              <div
                                class="leafygreen-ui-a533bt"
                              >
                                <label
                                  class="leafygreen-ui-gr5280"
                                  for="textinput-159"
                                >
                                  key
                                </label>
                              </div>
                              <div
                                class="leafygreen-ui-lzja97"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-label="key"
                                  autocomplete="on"
                                  class="leafygreen-ui-6i61vl"
                                  id="textinput-159"
                                  required=""
                                  type="text"
                                  value="Sample Input"
                                />
                                <div
                                  class="lg-ui-icon-selector-0000 leafygreen-ui-uy5fvv"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="form-group field field-string css-ejwhfc-DefaultFieldContainer eny4k1v0"
                        id=" root_expansions_0_value"
                      >
                        <div
                          class="css-c1sqx6-ElementWrapper ee4bs9n0"
                        >
                          <div
                            class="css-12pm1mq-MaxWidthContainer eevpusu0"
                          >
                            <div
                              class="css-1kbcljo-StyledTextInput eevpusu7 leafygreen-ui-xtefr5"
                            >
                              <div
                                class="leafygreen-ui-a533bt"
                              >
                                <label
                                  class="leafygreen-ui-gr5280"
                                  for="textinput-160"
                                >
                                  value
                                </label>
                              </div>
                              <div
                                class="leafygreen-ui-lzja97"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-label="value"
                                  autocomplete="on"
                                  class="leafygreen-ui-6i61vl"
                                  id="textinput-160"
                                  required=""
                                  type="text"
                                  value="Sample Input"
                                />
                                <div
                                  class="lg-ui-icon-selector-0000 leafygreen-ui-uy5fvv"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </div>
                  <div
                    class="css-oex5ed-ElementWrapper-DeleteButtonWrapper e1jxkcec4"
                  >
                    <button
                      aria-disabled="false"
                      class="lg-ui-button-0000 leafygreen-ui-pt6pqu"
                      data-cy="delete-item-button"
                      type="button"
                    >
                      <div
                        class="leafygreen-ui-v038xi"
                      />
                      <div
                        class="leafygreen-ui-v95oty"
                      >
                        <svg
                          aria-label="Trash Icon"
                          class="leafygreen-ui-yk23yl"
                          fill="none"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5 2a1 1 0 011-1h4a1 1 0 011 1h2a1 1 0 011 1v1H2V3a1 1 0 011-1h2zm9 3H2l1.678 8.392A2 2 0 005.64 15h4.72a2 2 0 001.962-1.608L14 5z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-string css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_validProjects"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-1iyoj2o"
                >
                  <label
                    class="leafygreen-ui-1fi5x3a"
                    for="textarea-161"
                  >
                    Valid Projects
                  </label>
                  <textarea
                    class="leafygreen-ui-j9hxzb"
                    id="textarea-161"
                    title="Valid Projects"
                  />
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots components/SpruceForm Example 2 1`] = `
<div>
  <div>
    <h3
      class="css-18p6yz-SettingsCardTitle e1h7idos1 leafygreen-ui-feh85s"
    >
      Admin Options
    </h3>
    <div
      class="css-akg61l-SettingsCard e1h7idos0 leafygreen-ui-1v4ednr"
    >
      <form
        class="rjsf"
        novalidate=""
      >
        <div
          class="form-group field field-object css-ejwhfc-DefaultFieldContainer eny4k1v0"
          id=" root"
        >
          <fieldset
            class="css-0"
            id="root"
          >
            <div
              class="form-group field field-boolean css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_distroIsCluster"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-162"
                    id="checkbox-162-label"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-162-label"
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-162"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
                    >
                      <svg
                        class="leafygreen-ui-6caof5"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Mark distro as a cluster (jobs are not run on this host, used for special purposes).
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-boolean css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_disableShallowClone"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-163"
                    id="checkbox-163-label"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-163-label"
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-163"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
                    >
                      <svg
                        class="leafygreen-ui-6caof5"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Disable shallow clone for this distro.
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-boolean css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_disableQueue"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-164"
                    id="checkbox-164-label"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-164-label"
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-164"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
                    >
                      <svg
                        class="leafygreen-ui-6caof5"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Disable queueing this distro. Tasks already in the task queue will be removed.
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-boolean css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_decommissionHosts"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-165"
                    id="checkbox-165-label"
                  >
                    <input
                      aria-checked="true"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-165-label"
                      checked=""
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-165"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
                    >
                      <svg
                        class="leafygreen-ui-1degv9q"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Decommission hosts of this distro for this update
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-string css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_reprovisionMethod"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  aria-label="radio-group-"
                  class="leafygreen-ui-14o8ny9"
                  role="group"
                >
                  <div
                    class="leafygreen-ui-jpwlig"
                  >
                    <label
                      class="leafygreen-ui-14lohqh"
                      for="radio-group--0"
                    >
                      <input
                        aria-checked="false"
                        aria-describedby="lg-166"
                        aria-disabled="false"
                        class="lg-ui-radio-group-0002 leafygreen-ui-1iwed1m"
                        id="radio-group--0"
                        name="radio-group-"
                        type="radio"
                        value="restartJasper"
                      />
                      <div
                        class="lg-ui-radio-group-0001 leafygreen-ui-1tsb3ci"
                      >
                        <div
                          class="lg-ui-radio-group-0000 leafygreen-ui-lej95p"
                        />
                      </div>
                      Restart Jasper service on running hosts of this distro for this update
                    </label>
                  </div>
                  <div
                    class="leafygreen-ui-jpwlig"
                  >
                    <label
                      class="leafygreen-ui-14lohqh"
                      for="radio-group--1"
                    >
                      <input
                        aria-checked="false"
                        aria-describedby="lg-167"
                        aria-disabled="false"
                        class="lg-ui-radio-group-0002 leafygreen-ui-1iwed1m"
                        id="radio-group--1"
                        name="radio-group-"
                        type="radio"
                        value="reprovisionHosts"
                      />
                      <div
                        class="lg-ui-radio-group-0001 leafygreen-ui-1tsb3ci"
                      >
                        <div
                          class="lg-ui-radio-group-0000 leafygreen-ui-lej95p"
                        />
                      </div>
                      Reprovision running hosts of this distro for this update
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots components/SpruceForm Example 3 1`] = `
<div>
  <div>
    <h3
      class="css-18p6yz-SettingsCardTitle e1h7idos1 leafygreen-ui-feh85s"
    >
      UI Options
    </h3>
    <div
      class="css-akg61l-SettingsCard e1h7idos0 leafygreen-ui-1v4ednr"
    >
      <form
        class="rjsf"
        novalidate=""
      >
        <div
          class="form-group field field-object css-ejwhfc-DefaultFieldContainer eny4k1v0"
          id=" root"
        >
          <fieldset
            class="css-0"
            id="root"
          >
            <div
              class="form-group field field-boolean css-ejwhfc-DefaultFieldContainer eny4k1v0"
              id=" root_visible"
            >
              <div
                class="css-c1sqx6-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-168"
                    id="checkbox-168-label"
                  >
                    <input
                      aria-checked="true"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-168-label"
                      checked=""
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-168"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
                    >
                      <svg
                        class="leafygreen-ui-1degv9q"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      This is the only visible page element
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </form>
    </div>
  </div>
</div>
`;
